objects/Banner__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <label>Active</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>test</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Image_URL__c</fullName>
        <label>Image URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Target_URL__c</fullName>
        <label>Target URL</label>
        <type>Url</type>
    </fields>
    <label>Banner</label>
    <nameField>
        <label>Banner Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Banners</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>